# inifile-cpp

./: .gitignore  CMakeLists.txt
test/: test_inifile.cpp
